fixed font for timeline; fixed z-index issues; changed image size on about page

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -24,7 +24,8 @@ body {
 }
 .position-relative {
     position: relative;
-    overflow: hiddenm}
+    overflow: hidden;
+}
 .text-uppercase {
     text-transform: uppercase;
 }
@@ -66,6 +67,9 @@ a {
 }
 .hover {
     cursor: pointer;
+}
+.modal-open .modal {
+    z-index: 9999;
 }
 /*=====  End of Whole page  ======*/
 
@@ -257,7 +261,7 @@ select.primary-content-color{
     border-radius: 7px;
     color: #0794A0;
     width: 100% !important;
-    z-index: 9999;
+    z-index: 9998;
 }
 .ui-selectmenu-button span.ui-selectmenu-text {
     padding: 5px 30px 5px 10px;
@@ -362,7 +366,7 @@ select.primary-content-color{
     overflow: hidden;
 }
 #howToUseS img {
-    max-width: 258px;
+    max-width: 210px;
     margin: 0 auto;
 }
 #howToUseS ul {
@@ -488,6 +492,7 @@ table td:nth-child(2) {
 .navbar-default {
     background: #fff;
     border: 0px;
+    z-index: 9999;
 }
 .navbar .nav>li>a {
     border-bottom: 1px solid #0794A0;
